--- a/spain-2025-itinerary.qmd
+++ b/spain-2025-itinerary.qmd
@@ -52,7 +52,8 @@ format:
 - **Day 7 (Oct 4):** O Pedrouzo → Santiago (~20 km)  
   - Highlights include Lavacolla, the traditional cleansing site, Monte do Gozo offering panoramic views of Santiago, and attending the Pilgrim’s Mass featuring the Botafumeiro.
   - Collect Compostela certificate in Santiago.  
-  - Overnight: Santiago.  
+  - Check-in: **Pensión Rua Nova** (Rúa Nova, 4, Santiago de Compostela; Confirmation no. 6216.069.981).  
+  - Overnight: Pensión Rua Nova (Single room with private bathroom, free Wi-Fi, pedestrian old town location).  
 
 ### Day 8 – Sun Oct 5
 - Full day in Santiago.  
