--- a/spain-2025-itinerary.qmd
+++ b/spain-2025-itinerary.qmd
@@ -41,17 +41,17 @@ format:
 ### Days 3–7 – Sept 30 to Oct 4 (Camino Francés – last 115 km)
 - **Day 3 (Sept 30):** Sarria → Portomarín (~22 km)  
   - Cross the Miño River into Portomarín, where the Church of San Nicolás was relocated stone by stone when the original town was flooded for the Belesar reservoir.
-  - Overnight: Portomarín **TBD**
+  - Overnight: **Pensión Albergue Gonzar** (Booking.com Confirmation no. 5222.020.161)
 - **Day 4 (Oct 1):** Portomarín → Palas de Rei (~25 km)  
   - Pass historic pilgrim hospices at Hospital de la Cruz and end in Palas de Rei, whose Church of San Tirso preserves remarkable medieval carvings.
-  - Overnight: Palas de Rei **TBD**
+  - Overnight: **Albergue San Marcos** (Booking.com Confirmation no. 6000.902.246)
 - **Day 5 (Oct 2):** Palas de Rei → Arzúa (~29 km)  
   - Often stop in Melide, famous for pulpo a la gallega (octopus) and the Romanesque church at Leboreiro.  
   - Arzúa is known for its cheese production and nearby Ribadiso hosts a medieval pilgrim hospital.
-  - Overnight: Arzúa **TBD**
+  - Overnight: **Cruce de Caminos Arzúa** (Booking.com Confirmation no. 6336.672.796) — refundable, backup if not staying at Ribadiso
 - **Day 6 (Oct 3):** Arzúa → O Pedrouzo (~19 km)  
   - En route visit the chapel of Santa Irene and experience the atmosphere of anticipation in O Pedrouzo as pilgrims gather for the final day.
-  - Overnight: O Pedrouzo **TBD**
+  - Overnight: **Albergue REM** (Booking.com Confirmation no. 6475.800.457)
 - **Day 7 (Oct 4):** O Pedrouzo → Santiago (~20 km)  
   - Highlights include Lavacolla, the traditional cleansing site, Monte do Gozo offering panoramic views of Santiago, and attending the Pilgrim’s Mass featuring the Botafumeiro.
   - Collect Compostela certificate in Santiago.  
@@ -68,14 +68,15 @@ format:
 - Morning bus to Finisterre (~2.5 hrs).  
 - Explore the fishing port, beach, and town.  
 - Evening walk to Cabo Fisterra lighthouse for sunset at the “end of the world.”  
-- Overnight: Finisterre **TBD** (or stay third night in Santiago).
+- Overnight: **Finisterre (book in Santiago if weather/energy permit) OR third night in Santiago** — decision to be made after arrival.
 
 ### Day 10 – Tue Oct 7
 - Morning in Finisterre — coffee in town or short coastal stroll.  
 - Midday bus back to Santiago (~2.5 hrs).  
-- Connect onward to Madrid in the afternoon (~3 hrs AVE train, ~1 hr flight).  
+- 11:48 — Depart Santiago (AVE 04314, Confort, seat 4D, Booking Reference: KYC3XB).  
+- 14:50 — Arrive Madrid Chamartín.  
 - Evening tapas crawl in La Latina or Malasaña.  
-- Overnight: Madrid **TBD** (stay near Sol, Gran Vía, or La Latina).  
+- Overnight: Madrid **hotel TBD — recommended Sol/Gran Vía/La Latina area**.  
 
 ### Day 11 – Wed Oct 8
 - Cercanías train to Bajaras T4
