--- a/spain-2025-itinerary.qmd
+++ b/spain-2025-itinerary.qmd
@@ -149,9 +149,8 @@ format:
 ---
 
 ## Notes & Next Steps
-- **Camino towns (Sept 30–Oct 4):** book 1–2 nights ahead, especially Portomarín & Arzúa.  
-- Book AVE from Santiago to Madrid
-- Book Madrid (Oct 6–7) hotels.
+- pack backpack
+- Book Madrid (Oct 6–7) hotel.
 - Decide 2 vs. 3 nights in Santiago +/- daytrip to Finisterre or other vs. Overnight in Finisterre
 
 ---
